--- a/src/components/custome-button/custome-button.scss
+++ b/src/components/custome-button/custome-button.scss
@@ -1,4 +1,5 @@
 .custom-button {
+  
   min-width: 165px;
   width: auto;
   height: 50px;
@@ -19,7 +20,15 @@
     color: black;
     border: 1px solid black;
   }
-}.custom-button {
+  &.googleSignin{
+    background-color:#4285F4
+     
+      
+     
+  }
+    
+}
+.custom-button {
  
 
   &:hover {
@@ -27,4 +36,5 @@
     color: black;
     border: 1px solid black;
   }
+
 }
