--- a/src/components/sign-up/sign-up.scss
+++ b/src/components/sign-up/sign-up.scss
@@ -2,16 +2,10 @@ $sub-color: grey;
 $main-color: black;
 
 .sign-up{
-    width: 35vw;
-    display: flex;
-    flex-direction: column;
-    border: solid 4px black;
-    border-radius:20px;
-    padding:20px;
-    justify-content: center;
-    text-align:center;
-    margin: auto;
-    box-shadow: 10px 10px 5px black;
+    border: solid;
+   overflow:hidden;
+   border-radius:5px;
+   padding:100px;
 }
 
 label{
