--- a/src/components/collection-item/collection-item.scss
+++ b/src/components/collection-item/collection-item.scss
@@ -4,15 +4,30 @@
     flex-direction: column;
     height: 350px;
     align-items: center;
-  
+    
+  position:relative;
     .image {
+        border:solid;
+        padding:2px;
       width: 100%;
       height: 95%;
       background-size: cover;
       background-position: center;
       margin-bottom: 5px;
     }
+  .custom-button{
+      opacity:0.7;
+      position:absolute;
+      top:250px;
+      
+      
+     
+  }&:hover{
+           transform: scaleY(1.1);
+          
+      }
   
+ 
     .collection-footer {
       width: 100%;
       height: 5%;
