--- a/src/components/custome-button/custome-button.scss
+++ b/src/components/custome-button/custome-button.scss
@@ -26,15 +26,9 @@
       
      
   }
+   &.inverted{
+       background-color:black;
+   }
     
 }
-.custom-button {
- 
 
-  &:hover {
-    background-color: white;
-    color: black;
-    border: 1px solid black;
-  }
-
-}
