--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -13,7 +13,7 @@
     .options{
         display: flex;
        
-        padding: 20px;
+        padding: 20px 0px 2px;
         justify-content: flex-end;
         
         
