--- a/src/components/collection-item/collection-item.scss
+++ b/src/components/collection-item/collection-item.scss
@@ -1,12 +1,24 @@
+@import url(https://fonts.googleapis.com/css?family=Bitter);
 .collection-item {
     width: 22%;
     display: flex;
     flex-direction: column;
     height: 350px;
     align-items: center;
+   
+    
+      @media only screen and (max-width: 600px) {
+  height:250px;
+  }
     
   position:relative;
     .image {
+        
+        @media only screen and (max-width: 600px) {
+  width:100%;
+  height:60%;
+  
+  }
         border:solid;
         padding:2px;
       width: 100%;
@@ -19,13 +31,14 @@
       opacity:0.7;
       position:absolute;
       top:250px;
-      
+      @media only screen and (max-width: 600px) {
+  min-width:0px;
+  line-height:25px;
+  padding:0px;
+  }
       
      
-  }&:hover{
-           transform: scaleY(1.1);
-          
-      }
+  }
   
  
     .collection-footer {
@@ -33,7 +46,9 @@
       height: 5%;
       display: flex;
       justify-content: space-between;
-      font-size: 18px;
+      font-size: 16px;
+      font-family:'Bitter';
+
   
       .name {
         width: 90%;
