--- a/src/components/cart-icon/cart-icon.scss
+++ b/src/components/cart-icon/cart-icon.scss
@@ -6,11 +6,13 @@
   align-items: center;
   justify-content: center;
   cursor: pointer;
+  margin-top:21px;
   
 
   .shopping-icon {
     width: 34px;
     height: 34px;
+    
   }
 
   .item-count {
@@ -20,4 +22,5 @@
     font-weight: bold;
     bottom: 20px;
   }
+  
 }
