--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -5,21 +5,33 @@
     display: flex;
     justify-content: space-between;
 
-    .logo{
+.logo1{
        padding: 20px;
-        height: 50%;
+        height: 40%;
+        margin-top:5px;
+      
     }
+     
+    .logo{
+        margin-top:10px;
+       padding: 20px;
+        height: 30%;
+      
+    }
+  
+
 
     .options{
         display: flex;
+        
        
-        padding: 20px 0px 2px;
+       
         justify-content: flex-end;
         
         
     }
     .option{
-        padding: 20px;
+        padding: 1px;
          text-decoration: none;
          color:black;
          font-family: 'Bitter';
@@ -28,4 +40,5 @@
 }
 
 
+   
 
