--- a/src/components/directory/directory.scss
+++ b/src/components/directory/directory.scss
@@ -1,4 +1,5 @@
 .directory-menu {
+    margin-top: 20px;
     width: 100%;
     display: flex;
     flex-wrap: wrap;
@@ -10,7 +11,8 @@
     
   @media only screen and (max-width: 600px) {
   .directory-menu {
-      
-    display:block;
+    
+     
+    
   }
 }
