--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -35,6 +35,7 @@
          text-decoration: none;
          color:black;
          font-family: 'Bitter';
+         -webkit-tap-highlight-color: rgba(0,0,0,0);
         
     }
 }
