--- a/src/components/menu-item/menu-item.scss
+++ b/src/components/menu-item/menu-item.scss
@@ -9,8 +9,7 @@
     margin: 0 6px 15px;
     overflow: hidden;
     border-radius: 11px;
-    
-
+     
     &:hover {
       cursor: pointer;
     
@@ -25,6 +24,9 @@
     }
     
     &.large{
+        
+        
+        
       height:400px;
     }
     &:first-child {
@@ -39,6 +41,9 @@
     .background-image{
       height: 100%;
       width: 100%;
+      background-position: 50%;
+    background-size: cover;
+    
     }
     .content {
       height: 90px;
@@ -65,4 +70,11 @@
       }
     }
   }
+   @media only screen and (max-width: 600px) {
+ .large.menu-item{
+      height:240px;
+  }
+}
   
+  
+ 
