--- a/src/components/directory/directory.scss
+++ b/src/components/directory/directory.scss
@@ -4,6 +4,7 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+    background-image: url(https://st4.depositphotos.com/1496387/30399/v/600/depositphotos_303997692-stock-illustration-school-seamless-background-education-science.jpg);
   }
   
   
