--- a/src/components/cart-icon/cart-icon.scss
+++ b/src/components/cart-icon/cart-icon.scss
@@ -7,11 +7,12 @@
   justify-content: center;
   cursor: pointer;
   margin-top:21px;
-  
+   -webkit-tap-highlight-color: rgba(0,0,0,0);
 
   .shopping-icon {
     width: 34px;
     height: 34px;
+     -webkit-tap-highlight-color: rgba(0,0,0,0);
     
   }
 
