--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -9,13 +9,14 @@
        padding: 20px;
         height: 40%;
         margin-top:5px;
-      
+       -webkit-tap-highlight-color: rgba(0,0,0,0);
     }
      
     .logo{
         margin-top:10px;
        padding: 20px;
         height: 30%;
+        
       
     }
   
