--- a/src/components/directory/directory.scss
+++ b/src/components/directory/directory.scss
@@ -1,7 +1,8 @@
 .directory-menu {
-    margin-top: 20px;
+  //  margin-top: 20px;
     width: 100%;
     display: flex;
+    padding: 20px;
     flex-wrap: wrap;
     justify-content: space-between;
     background-image: url(https://st4.depositphotos.com/1496387/30399/v/600/depositphotos_303997692-stock-illustration-school-seamless-background-education-science.jpg);
