--- a/src/pages/checkout/checkout.scss
+++ b/src/pages/checkout/checkout.scss
@@ -1,15 +1,15 @@
  
 
  .checkout {
-    padding:40px;
+    padding:15px 15px 5px 20px;
     display: flex;
-  
+    
     .name{
       padding:20px
     }
     .img{
-      height:150px;
-      width:150px;
+      height:100px;
+      width:100px;
       border:solid;
     }
   }
