--- a/src/components/cart-item/cart-item.scss
+++ b/src/components/cart-item/cart-item.scss
@@ -3,9 +3,10 @@
   display: flex;
   height: 80px;
   margin-bottom: 15px;
-
+  
   img {
     width: 30%;
+    border:solid;
   }
 
   .item-details {
