--- a/src/components/collection-item/collection-item.scss
+++ b/src/components/collection-item/collection-item.scss
@@ -1,63 +1,83 @@
-@import url(https://fonts.googleapis.com/css?family=Bitter);
-.collection-item {
-    width: 22%;
-    display: flex;
-    flex-direction: column;
-    height: 350px;
-    align-items: center;
-   
-    
-      @media only screen and (max-width: 600px) {
-  height:250px;
-  }
-    
-  position:relative;
-    .image {
-        
-        @media only screen and (max-width: 600px) {
-  width:100%;
-  height:60%;
-  
-  }
-        border:solid;
-        padding:2px;
-      width: 100%;
-      height: 95%;
-      background-size: cover;
-      background-position: center;
-      margin-bottom: 5px;
-    }
-  .custom-button{
-      opacity:0.7;
-      position:absolute;
-      top:250px;
-      @media only screen and (max-width: 600px) {
-  min-width:0px;
-  line-height:25px;
-  padding:0px;
-  }
-      
-     
-  }
-  
- 
-    .collection-footer {
-      width: 100%;
-      height: 5%;
-      display: flex;
-      justify-content: space-between;
-      font-size: 16px;
-      font-family:'Bitter';
+@import url('https://fonts.googleapis.com/css?family=Bitter');
 
-  
-      .name {
-        width: 90%;
-        margin-bottom: 15px;
-      }
-  
-      .price {
-        width: 10%;
-      }
+// Variables
+$primary-color: #333;
+$secondary-color: #f5f5f5;
+$accent-color: #ff6347;
+$font-family: 'Bitter', serif;
+
+// Mixins
+@mixin flexbox($direction: row) {
+  display: flex;
+  flex-direction: $direction;
+  justify-content: center;
+  align-items: center;
+}
+
+.collection-item {
+  width: 22%;
+  @include flexbox(column);
+  height: 350px;
+  //background-color: bisque;
+  position: relative;
+  background-color: powderblue;
+  padding-top: 5px;
+  border-radius: 15px;
+  @media only screen and (max-width: 600px) {
+    height: 250px;
+  }
+
+  .image {
+    width: 90%;
+    height: 95%;
+    background-size: cover;
+    background-position: center;
+    margin-bottom: 5px;
+    border-radius: 14px;
+    border: 1px solid $primary-color;
+    padding: 2px;
+
+    @media only screen and (max-width: 600px) {
+      width: 100%;
+      height: 60%;
     }
   }
-  
+
+  .custom-button {
+    opacity: 0.7;
+    position: absolute;
+    top: 250px;
+    transition: all 0.3s ease;
+
+    &:hover {
+      opacity: 1;
+    }
+
+    @media only screen and (max-width: 600px) {
+      min-width: 0;
+      line-height: 25px;
+      padding: 0;
+    }
+  }
+
+  .collection-footer {
+    width: 100%;
+    height: 5%;
+    @include flexbox(row);
+    justify-content: space-between;
+    font-size: 16px;
+    font-family: $font-family;
+    padding: 10px;
+    .name {
+      margin-left: 15px;
+      font-family: sans-serif;
+      width: 90%;
+      margin-bottom: 15px;
+    }
+
+    .price {
+      margin-right: 15px;
+      width: 10%;
+    }
+  }
+}
