--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -4,7 +4,16 @@
     height:100px ;
     display: flex;
     justify-content: space-between;
-
+    .logo2{
+        padding: 20px;
+         height: 50%;
+         margin-top:5px;
+        -webkit-tap-highlight-color: rgba(0,0,0,0);
+     }
+.Name{
+    margin-left: 0;
+    font-family: cursive;
+}
 .logo1{
        padding: 20px;
         height: 40%;
